packages/svelte/tests/compiler-errors/samples/unmatched-closing-tag-autoclose-2/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'element_invalid_closing_tag',
		message: '`</p>` attempted to close an element that was not open',
		position: [38, 38]
	}
});
